Finished Data processing and Classifier models created

--- a/Titanic Survival Prediction.ipynb
+++ b/Titanic Survival Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 140,
    "id": "c8b6c88a",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "sns.set()"
+    "sns.set()\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -237,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a0e6c1f",
+   "id": "168fe054",
    "metadata": {
     "scrolled": true
    },
@@ -280,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "919bf837",
+   "id": "98f34aeb",
    "metadata": {},
    "source": [
     "- ['Survived', 'Pclass', 'Sex', 'SibSp', 'Parch', 'Fare'] => columns have data for all records\n",
@@ -297,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1eeee080",
+   "id": "5b08933a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8e9d8350",
+   "id": "41cb29c6",
    "metadata": {
     "scrolled": true
    },
@@ -329,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "99a97760",
+   "id": "fd96cb42",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2bfb9ae9",
+   "id": "9c124155",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5e312ed0",
+   "id": "d04675dd",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "db5d56d2",
+   "id": "7eb91c02",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2644c624",
+   "id": "e33f9910",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aa6191cd",
+   "id": "df9f4f3a",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7df84e7d",
+   "id": "48335cab",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "da765b58",
+   "id": "e0d4c00a",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0d67ad13",
+   "id": "08b2270b",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5ee25446",
+   "id": "a5f611d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dc7128ee",
+   "id": "3beb8fc9",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a700cf5",
+   "id": "59c90494",
    "metadata": {},
    "source": [
     "### Check Point"
@@ -903,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5bf24288",
+   "id": "2703842b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f090df",
+   "id": "d06513b8",
    "metadata": {},
    "source": [
     "#### Drop unnecessary columns\n",
@@ -931,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6d6ac09d",
+   "id": "a9a8bfad",
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2ca4dbc7",
+   "id": "0bc86ed7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "946abfbe",
+   "id": "3509043c",
    "metadata": {},
    "source": [
     "Transform Gender Male and female to 0 and 1"
@@ -973,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2984c82b",
+   "id": "cfe380fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b500c347",
+   "id": "59f5b1f5",
    "metadata": {},
    "source": [
     "#### Explanatory Data Analysis "
@@ -992,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "cf318929",
+   "id": "b707cc09",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f6db9a18",
+   "id": "ae5027e0",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8ab977",
+   "id": "f7b9d56d",
    "metadata": {},
    "source": [
     "We have 891 out of 2435 data points for training\n",
@@ -1300,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "feeba026",
+   "id": "cb621b2c",
    "metadata": {},
    "outputs": [
     {
@@ -1331,9 +1335,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41c0d32d",
+   "metadata": {},
+   "source": [
+    "- in Pclass, Peaple in higher Class like 1 and 2 had more survival chance as compared to Class 3\n",
+    "- Majority of Male Died, but majoirity of Female survived. (In rescue boats, initially only Children and ladies were allowed, as a common practice)\n",
+    "- in Age group only Kids had more survival chance, same reason before\n",
+    "- Age group 20-30 had worst survival rate than all others\n",
+    "- in SibSp with 1 or 2 Siblings had better chance of surviving, If siblings aboard it's more likely these are kids than adult siblings traveling together\n",
+    "- Similar trend in Parch as well. If they had 1,2 or 3 parents or kids aboard, they have much higher chance of surviving"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f0a1db35",
+   "id": "2df6d3e3",
    "metadata": {},
    "outputs": [
     {
@@ -1360,6 +1377,546 @@
    "source": [
     "sns.pairplot(pre_train_data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d92c306e",
+   "metadata": {},
+   "source": [
+    "#### Scale and Transform data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "d61134e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pre_train_data.drop('Survived',axis=1)\n",
+    "Y = pre_train_data['Survived']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "204d40cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split( X, Y, test_size = 0.2, random_state = 42 )\n",
+    "x_train, x_test = X_train, X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "f1b6fa32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X)\n",
+    "x_train = scaler.transform(x_train)\n",
+    "x_test = scaler.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa619ba6",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression Model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "2f0f319c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logisticRegressionModel = LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "e507e799",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logisticRegressionModel.fit(x_train, y_train)\n",
+    "round(logisticRegressionModel.score(x_train,y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "341ceb9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.83"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_logReg = logisticRegressionModel.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred_logReg),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fbed4e1",
+   "metadata": {},
+   "source": [
+    "### Supporting Vector Classifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "8f3a4840",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.84"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC, LinearSVC\n",
+    "svc = SVC()\n",
+    "svc.fit(x_train, y_train)\n",
+    "round(svc.score(x_train, y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "fdeadd44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.79"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_svc = svc.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dfeccd5",
+   "metadata": {},
+   "source": [
+    "### Linear Supporting Vector Classifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "739953eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_svc = LinearSVC()\n",
+    "linear_svc.fit(x_train,y_train)\n",
+    "round(linear_svc.score(x_train,y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "a7b34532",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.79"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_linear_svc = linear_svc.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred_linear_svc),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0acc51e1",
+   "metadata": {},
+   "source": [
+    "###  Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "6fe23787",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.92"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rfc = RandomForestClassifier()\n",
+    "rfc.fit(x_train, y_train)\n",
+    "round(rfc.score(x_train, y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "6741c489",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.82"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_rfc = rfc.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred_rfc),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0e691d7",
+   "metadata": {},
+   "source": [
+    "###  KNN Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "a4d5be22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.85"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "KNN = KNeighborsClassifier()\n",
+    "KNN.fit(x_train, y_train)\n",
+    "round(KNN.score(x_train, y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "ec09b8e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_knn = KNN.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred_knn),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "194041b1",
+   "metadata": {},
+   "source": [
+    "###  Gaussian Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "58d6a557",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.78"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "GNB = GaussianNB()\n",
+    "GNB.fit(x_train, y_train)\n",
+    "round(GNB.score(x_train, y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "170dd5b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.75"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_gnb = GNB.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred_gnb),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b571ec6e",
+   "metadata": {},
+   "source": [
+    "###  Perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "9c50f5a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.64"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Perceptron\n",
+    "\n",
+    "perc = Perceptron()\n",
+    "perc.fit(x_train, y_train)\n",
+    "round(perc.score(x_train, y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "29e319f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.65"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_perc = perc.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred_perc),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6aa6214",
+   "metadata": {},
+   "source": [
+    "### Stochastic Gradient Descent Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "1f40c323",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.78"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "SGD = SGDClassifier()\n",
+    "SGD.fit(x_train, y_train)\n",
+    "round(SGD.score(x_train, y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "bf37fc7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.83"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_sgd = SGD.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred_sgd),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64e03172",
+   "metadata": {},
+   "source": [
+    "### Decision Tree Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "f37768dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.92"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "DTC = DecisionTreeClassifier()\n",
+    "DTC.fit(x_train, y_train)\n",
+    "round(DTC.score(x_train, y_train),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "587ec13e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.78"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_dtc = DTC.predict(x_test)\n",
+    "round(accuracy_score(y_test, y_pred_dtc),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15b4f5f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
