After Kaggle submission

--- a/Titanic Survival Prediction.ipynb
+++ b/Titanic Survival Prediction.ipynb
@@ -1519,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "fdeadd44",
+   "id": "60f9229a",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dfeccd5",
+   "id": "d3dbea44",
    "metadata": {},
    "source": [
     "### Linear Supporting Vector Classifiers"
@@ -1548,10 +1548,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "739953eb",
+   "execution_count": 193,
+   "id": "e260042c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linear_svc = LinearSVC()\n",
     "linear_svc.fit(x_train,y_train)\n",
@@ -1582,7 +1593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0acc51e1",
+   "id": "d7761d31",
    "metadata": {},
    "source": [
     "###  Random Forest Classifier"
@@ -1591,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "6fe23787",
+   "id": "675996fb",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "6741c489",
+   "id": "7a8e98f5",
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e691d7",
+   "id": "5960053e",
    "metadata": {},
    "source": [
     "###  KNN Classifier"
@@ -1646,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "a4d5be22",
+   "id": "0158f819",
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "ec09b8e4",
+   "id": "cb5c2845",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "194041b1",
+   "id": "51f876bd",
    "metadata": {},
    "source": [
     "###  Gaussian Naive Bayes"
@@ -1701,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "58d6a557",
+   "id": "5e5a8a41",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "170dd5b2",
+   "id": "2842593b",
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b571ec6e",
+   "id": "30736c50",
    "metadata": {},
    "source": [
     "###  Perceptron"
@@ -1756,7 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "9c50f5a8",
+   "id": "f581d985",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1792,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "29e319f7",
+   "id": "80aa369f",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6aa6214",
+   "id": "afe8ac81",
    "metadata": {},
    "source": [
     "### Stochastic Gradient Descent Classifier"
@@ -1811,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "1f40c323",
+   "id": "8baf1254",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1847,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "bf37fc7b",
+   "id": "77a998ed",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64e03172",
+   "id": "58c69d5a",
    "metadata": {},
    "source": [
     "### Decision Tree Classifier"
@@ -1866,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "f37768dd",
+   "id": "b27b5f52",
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "587ec13e",
+   "id": "d2fa80dc",
    "metadata": {},
    "outputs": [
     {
@@ -1911,9 +1922,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c77a87a",
+   "metadata": {},
+   "source": [
+    "### Saving Submissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "010bcc81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submissionDF = pre_test_data.copy()\n",
+    "submissionDF = submissionDF.drop(['Pclass','Sex','Age','SibSp','Parch'],axis=1)\n",
+    "testData = scaler.transform(pre_test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "d54de531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest 71%\n",
+    "RFC_df = submissionDF\n",
+    "y_pred_rfc = rfc.predict(testData)\n",
+    "\n",
+    "RFC_df['Survived'] = y_pred_rfc\n",
+    "RFC_df = RFC_df.sort_index()\n",
+    "RFC_df.to_csv('data/rfc.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "90258f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SVC = 78 %\n",
+    "SVC_df = submissionDF\n",
+    "y_pred_svc = svc.predict(testData)\n",
+    "SVC_df['Survived'] = y_pred_svc\n",
+    "SVC_df.to_csv('data/svc.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "ff9fb7f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear SVC = 76.6 %\n",
+    "LSVC_df = submissionDF\n",
+    "y_pred_lsvc = linear_svc.predict(testData)\n",
+    "LSVC_df['Survived'] = y_pred_lsvc\n",
+    "LSVC_df.to_csv('data/lsvc.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "144d2976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic Regression = 75.36 %\n",
+    "LR_df = submissionDF\n",
+    "y_pred_lr = logisticRegressionModel.predict(testData)\n",
+    "LR_df['Survived'] = y_pred_lr\n",
+    "LR_df.to_csv('data/logisticRegression.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "bdc57e81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KNN = 74.64 %\n",
+    "KNN_df = submissionDF\n",
+    "y_pred_KNN = KNN.predict(testData)\n",
+    "KNN_df['Survived'] = y_pred_KNN\n",
+    "KNN_df.to_csv('data/KNN.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "14e64090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GNB = 74.16 %\n",
+    "GNB_df = submissionDF\n",
+    "y_pred_GNB = GNB.predict(testData)\n",
+    "GNB_df['Survived'] = y_pred_GNB\n",
+    "GNB_df.to_csv('data/GNB.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "49963771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# perc = 61.244 %\n",
+    "perc_df = submissionDF\n",
+    "y_pred_perc = perc.predict(testData)\n",
+    "perc_df['Survived'] = y_pred_perc\n",
+    "perc_df.to_csv('data/perc.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "dfaa662c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SGD = 73.44 %\n",
+    "SGD_df = submissionDF\n",
+    "y_pred_SGD = SGD.predict(testData)\n",
+    "SGD_df['Survived'] = y_pred_SGD\n",
+    "SGD_df.to_csv('data/SGD.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "8e7c5181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DTC = 63.88 %\n",
+    "DTC_df = submissionDF\n",
+    "y_pred_DTC = DTC.predict(testData)\n",
+    "DTC_df['Survived'] = y_pred_DTC\n",
+    "DTC_df.to_csv('data/DTC.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15b4f5f8",
+   "id": "f28a920c",
    "metadata": {},
    "outputs": [],
    "source": []
