--- a/Titanic Survival Prediction.ipynb
+++ b/Titanic Survival Prediction.ipynb
@@ -1519,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "60f9229a",
+   "id": "f7483528",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3dbea44",
+   "id": "ec4ec1e8",
    "metadata": {},
    "source": [
     "### Linear Supporting Vector Classifiers"
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "e260042c",
+   "id": "0e88649b",
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7761d31",
+   "id": "851e20ab",
    "metadata": {},
    "source": [
     "###  Random Forest Classifier"
@@ -1602,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "675996fb",
+   "id": "c4dc9c2b",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "7a8e98f5",
+   "id": "c3a07f95",
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5960053e",
+   "id": "251d43d7",
    "metadata": {},
    "source": [
     "###  KNN Classifier"
@@ -1657,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "0158f819",
+   "id": "f5a9a5d5",
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "cb5c2845",
+   "id": "8e7f1867",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51f876bd",
+   "id": "e15a7278",
    "metadata": {},
    "source": [
     "###  Gaussian Naive Bayes"
@@ -1712,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "5e5a8a41",
+   "id": "932ed4fb",
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "2842593b",
+   "id": "0172fc18",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30736c50",
+   "id": "670c8ed2",
    "metadata": {},
    "source": [
     "###  Perceptron"
@@ -1767,7 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "f581d985",
+   "id": "989713b0",
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1792,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "80aa369f",
+   "id": "4618b56a",
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afe8ac81",
+   "id": "57fa9df3",
    "metadata": {},
    "source": [
     "### Stochastic Gradient Descent Classifier"
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "8baf1254",
+   "id": "9563eb21",
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1847,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "77a998ed",
+   "id": "f8d94ef4",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c69d5a",
+   "id": "b6a8df02",
    "metadata": {},
    "source": [
     "### Decision Tree Classifier"
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "b27b5f52",
+   "id": "662a84d1",
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "d2fa80dc",
+   "id": "811e2f25",
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c77a87a",
+   "id": "317f6e23",
    "metadata": {},
    "source": [
     "### Saving Submissions"
@@ -1932,7 +1932,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "010bcc81",
+   "id": "6b8b2f62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "d54de531",
+   "id": "f92b1225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1960,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "90258f08",
+   "id": "ef84a120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1974,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "ff9fb7f0",
+   "id": "bab80d32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1988,7 +1988,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "144d2976",
+   "id": "6f1ef4b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "bdc57e81",
+   "id": "fdeae3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +2016,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "14e64090",
+   "id": "93bcff91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "49963771",
+   "id": "0f1c8727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2044,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "dfaa662c",
+   "id": "cf068d87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,7 +2058,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "8e7c5181",
+   "id": "132bbd16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2070,12 +2070,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f28a920c",
+   "cell_type": "markdown",
+   "id": "1e7f8833",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Best Accuracy I could achieve was 78%. \n",
+    "We'll try see different data cleaning and data manipulation process to see if we can improve anymore"
+   ]
   }
  ],
  "metadata": {
